--- a/source/index.html
+++ b/source/index.html
@@ -487,6 +487,20 @@
     </div>
   </section>
 
+  
+
+  <section class="__hidden">
+    <div class="popup hide">
+      <button class="popup__btn"></button>
+      <p class="popup__counter"></p>
+      <p class="popup__title"></p>
+      <button type="button" class="popup__control popup__control--right"></button>
+      <button type="button" class="popup__control popup__control--left"></button>
+      <div class="popup__content">
+        <div class="popup__content-wrapper"></div>
+      </div>
+    </div>
+  </section>
   <script src="./js/jquery.js"></script>
   <script src="./js/animated-text.js"></script>
   <script src="./js/script.js"></script>
