Add Solutions section

--- a/source/index.html
+++ b/source/index.html
@@ -487,7 +487,53 @@
     </div>
   </section>
 
-  
+  <section class="solutions js-animated" data-animation="fadeInUp">
+    <div class="solutions__wrapper">
+      <h2 class="solutions__title">Разработаем уникальное решение<br><span class="solutions__title--red">под ваши задачи</span></h2>
+      <div class="solutions__container">
+        <div class="solutions__item solution">
+          <h4 class="solution__title solution__title--1">Застройщикам</h4>
+          <p class="solution__text">
+            Архитектурное освещение повысит привлекательность вашего здания,сделает объекты особенными и узнаваемыми, выделив вас на рынке.Комфортная среда постройки и прилегающей к ней территории,гарантированно увеличит стоимость вашего объекта недвижимости.
+          </p>
+        </div>
+        <div class="solutions__item solution">
+          <h4 class="solution__title solution__title--2">ПРОЕКТИРОВЩИКАМ И АРХИТЕКТОРАМ</h4>
+          <p class="solution__text">
+            Создадим визуальную концепцию освещения, которая позволит индивидуально подчеркнуть архитектуру здания, и возьмем на себя все проектные работы. При необходимости согласуем ваш проект во всех требуемых органах.
+          </p>
+        </div>
+        <div class="solutions__item solution">
+          <h4 class="solution__title solution__title--3">ГЕНПОДРЯДЧИКАМ</h4>
+          <p class="solution__text">
+            В рамках согласованного сметного бюджета выполним и реализуем все необходимые работы по архитектурному освещению объекта и его территории под ключ. Моментально реагируем на экстренные ситуации,выезжаем на Моск Ур и принимаем участие в согласовании каждого решения с заказчиком.
+          </p>
+        </div>
+        <div class="solutions__item solution">
+          <h4 class="solution__title solution__title--4">ВЛАДЕЛЬЦАМ КОММЕРЧЕСКОЙ НЕДВИЖИМОСТИ</h4>
+          <p class="solution__text">
+            С помощью архитектурной подсветки мы повысим узнаваемость вашего объекта и сделаем его привлекательным. Это позволит привлечь якорных арендаторов и увеличит трафик посетителей.
+          </p>
+        </div>
+        <div class="solutions__item solution">
+          <h4 class="solution__title solution__title--5">УПРАВЛЯЮЩИМ КОМПАНИЯМ</h4>
+          <p class="solution__text">
+            Архитектурное освещение увеличит лояльность собственников и арендаторов. Новый ночной вид здания придаст статус и привлечет
+            дополнительное внимание в глазах людей.
+          </p>
+        </div>
+        <div class="solutions__item solution">
+          <h4 class="solution__title solution__title--6">ВЛАДЕЛЬЦАМ ЧАСТНЫХ ДОМОВ</h4>
+          <p class="solution__text">
+            Освещение фасада частного дома создаст благоприятную среду
+            проживания и добавит ему уюта. Наше архитектурно-художественное
+            освещение возможно интегрировать в любую современную систему умного
+            дома.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="__hidden">
     <div class="popup hide">
