Add Architect section

--- a/source/index.html
+++ b/source/index.html
@@ -395,130 +395,168 @@
     </ul>
     <div class="portfolio__container">
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="1" data-alt="ТРЦ" style="background-image: url(./img/portfolio-1.jpg);"></a>
+        <a class="portfolio__link" data-index="1" data-alt="ТРЦ"
+          style="background-image: url(./img/portfolio-1.jpg);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="1" data-alt="ТРЦ «Новомосковский»" style="background-image: url(./img/portfolio-2.webp);"></a>
+        <a class="portfolio__link" data-index="1" data-alt="ТРЦ «Новомосковский»"
+          style="background-image: url(./img/portfolio-2.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="1" data-alt="ТЦ «Brosko Mall»" style="background-image: url(./img/portfolio-3.webp);"></a>
+        <a class="portfolio__link" data-index="1" data-alt="ТЦ «Brosko Mall»"
+          style="background-image: url(./img/portfolio-3.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="1" data-alt="ТЦ «Март»" style="background-image: url(./img/portfolio-4.webp);"></a>
+        <a class="portfolio__link" data-index="1" data-alt="ТЦ «Март»"
+          style="background-image: url(./img/portfolio-4.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="1" data-alt="ТЦ «Можайский Двор»" style="background-image: url(./img/portfolio-5.webp);"></a>
+        <a class="portfolio__link" data-index="1" data-alt="ТЦ «Можайский Двор»"
+          style="background-image: url(./img/portfolio-5.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="1" data-alt="ТЦ «Севастополь»" style="background-image: url(./img/portfolio-6.webp);"></a>
+        <a class="portfolio__link" data-index="1" data-alt="ТЦ «Севастополь»"
+          style="background-image: url(./img/portfolio-6.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="2" data-alt="Жилой комплекс «Трианон»" style="background-image: url(./img/portfolio-7.webp);"></a>
+        <a class="portfolio__link" data-index="2" data-alt="Жилой комплекс «Трианон»"
+          style="background-image: url(./img/portfolio-7.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="2" data-alt="Жилой комплекс г. Екатеринбург" style="background-image: url(./img/portfolio-8.webp);"></a>
+        <a class="portfolio__link" data-index="2" data-alt="Жилой комплекс г. Екатеринбург"
+          style="background-image: url(./img/portfolio-8.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="2" data-alt="Отель «Marins Park Hotel»" style="background-image: url(./img/portfolio-9.webp);"></a>
+        <a class="portfolio__link" data-index="2" data-alt="Отель «Marins Park Hotel»"
+          style="background-image: url(./img/portfolio-9.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="3" data-alt="Мост в г. Белгород" style="background-image: url(./img/portfolio-10.webp);"></a>
+        <a class="portfolio__link" data-index="3" data-alt="Мост в г. Белгород"
+          style="background-image: url(./img/portfolio-10.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="3" data-alt="Мост через Волгу" style="background-image: url(./img/portfolio-11.webp);"></a>
+        <a class="portfolio__link" data-index="3" data-alt="Мост через Волгу"
+          style="background-image: url(./img/portfolio-11.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="3" data-alt="Транспортная развязка г. Белгород" style="background-image: url(./img/portfolio-12.webp);"></a>
+        <a class="portfolio__link" data-index="3" data-alt="Транспортная развязка г. Белгород"
+          style="background-image: url(./img/portfolio-12.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="4" data-alt="Памятник в Луксоре" style="background-image: url(./img/portfolio-13.webp);"></a>
+        <a class="portfolio__link" data-index="4" data-alt="Памятник в Луксоре"
+          style="background-image: url(./img/portfolio-13.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="4" data-alt="Площадь в Калининграде" style="background-image: url(./img/portfolio-14.webp);"></a>
+        <a class="portfolio__link" data-index="4" data-alt="Площадь в Калининграде"
+          style="background-image: url(./img/portfolio-14.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="4" data-alt="Поклонный крест г. Нижний Новгород" style="background-image: url(./img/portfolio-15.webp);"></a>
+        <a class="portfolio__link" data-index="4" data-alt="Поклонный крест г. Нижний Новгород"
+          style="background-image: url(./img/portfolio-15.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="4" data-alt="Спасская часовня г. Нижний Новгород" style="background-image: url(./img/portfolio-16.webp);"></a>
+        <a class="portfolio__link" data-index="4" data-alt="Спасская часовня г. Нижний Новгород"
+          style="background-image: url(./img/portfolio-16.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="5" data-alt="P_k4" style="background-image: url(./img/portfolio-17.jpg);"></a>
+        <a class="portfolio__link" data-index="5" data-alt="P_k4"
+          style="background-image: url(./img/portfolio-17.jpg);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="5" data-alt="Коттедж" style="background-image: url(./img/portfolio-18.webp);"></a>
+        <a class="portfolio__link" data-index="5" data-alt="Коттедж"
+          style="background-image: url(./img/portfolio-18.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="5" data-alt="Визуализация коттеджа" style="background-image: url(./img/portfolio-19.png);"></a>
+        <a class="portfolio__link" data-index="5" data-alt="Визуализация коттеджа"
+          style="background-image: url(./img/portfolio-19.png);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="5" data-alt="Загородный дом" style="background-image: url(./img/portfolio-20.jpg);"></a>
+        <a class="portfolio__link" data-index="5" data-alt="Загородный дом"
+          style="background-image: url(./img/portfolio-20.jpg);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="6" data-alt="Ликеро-водочный завод" style="background-image: url(./img/portfolio-21.webp);"></a>
+        <a class="portfolio__link" data-index="6" data-alt="Ликеро-водочный завод"
+          style="background-image: url(./img/portfolio-21.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="6" data-alt="Нижегородский кремль" style="background-image: url(./img/portfolio-22.webp);"></a>
+        <a class="portfolio__link" data-index="6" data-alt="Нижегородский кремль"
+          style="background-image: url(./img/portfolio-22.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="6" data-alt="Освещение федерального казначейства г. Владимир" style="background-image: url(./img/portfolio-23.webp);"></a>
+        <a class="portfolio__link" data-index="6" data-alt="Освещение федерального казначейства г. Владимир"
+          style="background-image: url(./img/portfolio-23.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="6" data-alt="Освещение федерального казначейства" style="background-image: url(./img/portfolio-24.webp);"></a>
+        <a class="portfolio__link" data-index="6" data-alt="Освещение федерального казначейства"
+          style="background-image: url(./img/portfolio-24.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="6" data-alt="Памятник культуры на ул. Остоженка" style="background-image: url(./img/portfolio-25.webp);"></a>
+        <a class="portfolio__link" data-index="6" data-alt="Памятник культуры на ул. Остоженка"
+          style="background-image: url(./img/portfolio-25.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="6" data-alt="подсветка Нижегородского кремля" style="background-image: url(./img/portfolio-26.webp);"></a>
+        <a class="portfolio__link" data-index="6" data-alt="подсветка Нижегородского кремля"
+          style="background-image: url(./img/portfolio-26.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="7" data-alt="«Транснефть»" style="background-image: url(./img/portfolio-27.webp);"></a>
+        <a class="portfolio__link" data-index="7" data-alt="«Транснефть»"
+          style="background-image: url(./img/portfolio-27.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="7" data-alt="Аэропорт г. Норильск" style="background-image: url(./img/portfolio-28.webp);"></a>
+        <a class="portfolio__link" data-index="7" data-alt="Аэропорт г. Норильск"
+          style="background-image: url(./img/portfolio-28.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="7" data-alt="Кинотеатр «Октябрь»" style="background-image: url(./img/portfolio-29.webp);"></a>
+        <a class="portfolio__link" data-index="7" data-alt="Кинотеатр «Октябрь»"
+          style="background-image: url(./img/portfolio-29.webp);"></a>
       </div>
       <div class="portfolio__item js-animated" data-animation="upScale">
-        <a class="portfolio__link" data-index="7" data-alt="Школа г. Гыда" style="background-image: url(./img/portfolio-30.webp);"></a>
+        <a class="portfolio__link" data-index="7" data-alt="Школа г. Гыда"
+          style="background-image: url(./img/portfolio-30.webp);"></a>
       </div>
     </div>
   </section>
 
   <section class="solutions js-animated" data-animation="fadeInUp">
     <div class="solutions__wrapper">
-      <h2 class="solutions__title">Разработаем уникальное решение<br><span class="solutions__title--red">под ваши задачи</span></h2>
+      <h2 class="solutions__title">Разработаем уникальное решение<br><span class="solutions__title--red">под ваши
+          задачи</span></h2>
       <div class="solutions__container">
         <div class="solutions__item solution">
           <h4 class="solution__title solution__title--1">Застройщикам</h4>
           <p class="solution__text">
-            Архитектурное освещение повысит привлекательность вашего здания,сделает объекты особенными и узнаваемыми, выделив вас на рынке.Комфортная среда постройки и прилегающей к ней территории,гарантированно увеличит стоимость вашего объекта недвижимости.
+            Архитектурное освещение повысит привлекательность вашего здания,сделает объекты особенными и узнаваемыми,
+            выделив вас на рынке.Комфортная среда постройки и прилегающей к ней территории,гарантированно увеличит
+            стоимость вашего объекта недвижимости.
           </p>
         </div>
         <div class="solutions__item solution">
           <h4 class="solution__title solution__title--2">ПРОЕКТИРОВЩИКАМ И АРХИТЕКТОРАМ</h4>
           <p class="solution__text">
-            Создадим визуальную концепцию освещения, которая позволит индивидуально подчеркнуть архитектуру здания, и возьмем на себя все проектные работы. При необходимости согласуем ваш проект во всех требуемых органах.
+            Создадим визуальную концепцию освещения, которая позволит индивидуально подчеркнуть архитектуру здания, и
+            возьмем на себя все проектные работы. При необходимости согласуем ваш проект во всех требуемых органах.
           </p>
         </div>
         <div class="solutions__item solution">
           <h4 class="solution__title solution__title--3">ГЕНПОДРЯДЧИКАМ</h4>
           <p class="solution__text">
-            В рамках согласованного сметного бюджета выполним и реализуем все необходимые работы по архитектурному освещению объекта и его территории под ключ. Моментально реагируем на экстренные ситуации,выезжаем на Моск Ур и принимаем участие в согласовании каждого решения с заказчиком.
+            В рамках согласованного сметного бюджета выполним и реализуем все необходимые работы по архитектурному
+            освещению объекта и его территории под ключ. Моментально реагируем на экстренные ситуации,выезжаем на Моск
+            Ур и принимаем участие в согласовании каждого решения с заказчиком.
           </p>
         </div>
         <div class="solutions__item solution">
           <h4 class="solution__title solution__title--4">ВЛАДЕЛЬЦАМ КОММЕРЧЕСКОЙ НЕДВИЖИМОСТИ</h4>
           <p class="solution__text">
-            С помощью архитектурной подсветки мы повысим узнаваемость вашего объекта и сделаем его привлекательным. Это позволит привлечь якорных арендаторов и увеличит трафик посетителей.
+            С помощью архитектурной подсветки мы повысим узнаваемость вашего объекта и сделаем его привлекательным. Это
+            позволит привлечь якорных арендаторов и увеличит трафик посетителей.
           </p>
         </div>
         <div class="solutions__item solution">
           <h4 class="solution__title solution__title--5">УПРАВЛЯЮЩИМ КОМПАНИЯМ</h4>
           <p class="solution__text">
-            Архитектурное освещение увеличит лояльность собственников и арендаторов. Новый ночной вид здания придаст статус и привлечет
+            Архитектурное освещение увеличит лояльность собственников и арендаторов. Новый ночной вид здания придаст
+            статус и привлечет
             дополнительное внимание в глазах людей.
           </p>
         </div>
@@ -530,6 +568,55 @@
             освещение возможно интегрировать в любую современную систему умного
             дома.
           </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="architect">
+    <div class="architect__container">
+      <div class="architect__wrapper">
+        <h2 class="architect__title">
+          Получите консультацию <span class="architect__title--red">Главного Архитектора</span> и расчёт стоимости
+          освещения прямо сейчас!
+        </h2>
+        <div class="architect__services">
+          <div class="architect__item">
+            <p class="architect__text architect__text--1">
+              Разработка дизайн-проектов фасадного освещения любой сложности
+            </p>
+          </div>
+          <div class="architect__item">
+            <p class="architect__text architect__text--2">
+              Расчёт времени изготовления заказа
+            </p>
+          </div>
+          <div class="architect__item">
+            <p class="architect__text architect__text--3">
+              Рекомендации по подбору материалов и выбор цвета освещения
+            </p>
+          </div>
+          <div class="architect__item">
+            <p class="architect__text architect__text--4">Расчет стоимости в рамках выбранного ценового диапазона</p>
+          </div>
+        </div>
+        <img src="./img/architect-img.jpg" alt="Здание" class="architect__img">
+        <div class="architect__callback callback callback--architect">
+          <div class="callback__modal modal">
+            <p class="modal__warning">Оставить заявку</p>
+            <p class="modal__title">на бесплатную консультацию с главным
+              архитектором компании Новый Свет Инжиниринг</p>
+            <form action="send.php" class="modal__form form">
+              <div class="form__field">
+                <label for="phone3" class="visually-hidden">Контакный телефон</label>
+                <input type="tel" name="phone" id="phone3" class="form__input form__input--small"
+                  placeholder="Введите номер телефона">
+              </div>
+              <button class="form__submit" type="submit">Заказать звонок для консультации</button>
+            </form>
+            <p class="modal__subtitle">Главный Архитектор перезвонит по
+              указанному номеру в течение 15 минут</p>
+          </div>
         </div>
       </div>
     </div>
