--- a/source/index.html
+++ b/source/index.html
@@ -55,7 +55,7 @@
           <a href="#portfolio" class="navigation__item">Портфолио</a>
         </li>
         <li>
-          <a href="" class="navigation__item">Контакты</a>
+          <a href="#contacts" class="navigation__item">Контакты</a>
         </li>
       </ul>
     </nav>
@@ -573,35 +573,35 @@
     </div>
   </section>
 
-  <section class="architect">
+  <section class="architect" id="contacts">
     <div class="architect__container">
       <div class="architect__wrapper">
-        <h2 class="architect__title">
+        <h2 class="architect__title js-animated" data-animation="fadeInLeft">
           Получите консультацию <span class="architect__title--red">Главного Архитектора</span> и расчёт стоимости
           освещения прямо сейчас!
         </h2>
         <div class="architect__services">
-          <div class="architect__item">
+          <div class="architect__item js-animated" data-animation="fadeInUp">
             <p class="architect__text architect__text--1">
               Разработка дизайн-проектов фасадного освещения любой сложности
             </p>
           </div>
-          <div class="architect__item">
+          <div class="architect__item js-animated" data-animation="fadeInUp">
             <p class="architect__text architect__text--2">
               Расчёт времени изготовления заказа
             </p>
           </div>
-          <div class="architect__item">
+          <div class="architect__item js-animated" data-animation="fadeInUp">
             <p class="architect__text architect__text--3">
               Рекомендации по подбору материалов и выбор цвета освещения
             </p>
           </div>
-          <div class="architect__item">
+          <div class="architect__item js-animated" data-animation="fadeInUp">
             <p class="architect__text architect__text--4">Расчет стоимости в рамках выбранного ценового диапазона</p>
           </div>
         </div>
         <img src="./img/architect-img.jpg" alt="Здание" class="architect__img">
-        <div class="architect__callback callback callback--architect">
+        <div class="architect__callback callback callback--architect js-animated" data-animation="fadeInUp">
           <div class="callback__modal modal">
             <p class="modal__warning">Оставить заявку</p>
             <p class="modal__title">на бесплатную консультацию с главным
