Add Contacts section

--- a/source/index.html
+++ b/source/index.html
@@ -622,6 +622,52 @@
     </div>
   </section>
 
+  <section class="contacts js-animated" data-animation="fadeInUp">
+    <div class="contacts__wrapper">
+      <p class="contacts__sup-title">Компания Новый Свет Инжиниринг</p>
+      <h2 class="contacts__title">
+        Подготовит для вас<br>
+        <span class="contacts__title--red">уникальное световое оформление</span>
+      </h2>
+      <div class="contacts__container">
+        <div class="contacts__description js-animated" data-animation="fadeInRight">
+          <p class="contacts__text">
+            Мы не работаем по шаблону. К нам часто обращаются заказчики с нестандартной задачей. Мы всегда беремся за
+            реализацию таких проектов - ведь это и есть самое интересное в нашей работе. Создание уникальной
+            дизайн-концепции каждого объекта позволяет реализовывать самые неординарные задумки.
+          </p>
+          <div class="contacts__achievments achievments">
+            <div class="achievments__item">
+              <p class="achievments__sub-title">Более</p>
+              <b class="achievments__title">10</b>
+              <p class="achievments__sub-title">лет на рынке</p>
+            </div>
+            <div class="achievments__item">
+              <p class="achievments__sub-title">Более</p>
+              <b class="achievments__title">400</b>
+              <p class="achievments__sub-title">выполненных проектов</p>
+            </div>
+            <div class="achievments__item">
+              <b class="achievments__title">49</b>
+              <p class="achievments__sub-title">сотрудника в штате</p>
+            </div>
+          </div>
+        </div>
+        <div class="contacts__contact contact js-animated" data-animation="fadeInLeft">
+          <h3 class="contact__title">Наши контакты</h3>
+          <a href="tel:+79257145111" class="contact__item contact__item--phone">8 (925) 714-51-11</a>
+          <p class="contact__item  contact__item--time">Пн-Пт 9:00 - 18:00</p>
+          <p class="contact__item  contact__item--address">г. Москва, наб. Дербеневская, д. 7, стр. 2, помещение
+            35/1/3(РМ281)</p>
+          <a href="mailto: info@arh-moscow.ru" class="contact__item  contact__item--mail">info@arh-moscow.ru</a>
+          <p class="contact__text">Задайте вопрос напрямую:
+          </p>
+          <button class="form__submit contact__btn" type="submit">написать в WhatsApp</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="__hidden">
     <div class="popup hide">
       <button class="popup__btn"></button>
